--- a/Pod/Resources/en.lproj/Localizable.strings
+++ b/Pod/Resources/en.lproj/Localizable.strings
@@ -2,4 +2,6 @@ EmptyTestSuiteErrorMessage="The specified Test Suite contains 0 tests. Either a)
 
 TestPageErrorMessage="Fitnesse test page failed with message - '%@'";
 
-TestSuiteParsingErrorMessage="Error occured reading the Fitnesse Test Report XML file - the specified test suite likely does not exist (Check the 'Generate Fitnesse Test Report File' 'build phase' setting 'FITNESSE_SUITE_NAME=<Your-Test-Suite-Name>' is a valid test suite name)";
+TestSuiteParsingErrorMessage="Error occured reading the Fitnesse Test Report XML file - the specified test suite likely does not exist (Check the 'Generate Fitnesse Test Report File' 'build phase' setting 'FITNESSE_SUITE_NAME=<Your-Test-Suite-Name>' is set to a valid test suite name)";
+
+TestSuiteDataNotFound="Fitnesse Test Report Data File Not Found. Check log files for possible [OCSP] warnings or errors.";
