--- a/Pod/Resources/en.lproj/Localizable.strings
+++ b/Pod/Resources/en.lproj/Localizable.strings
@@ -5,3 +5,5 @@ TestPageErrorMessage="Fitnesse test page failed with message - '%@'";
 TestSuiteParsingErrorMessage="Error occured reading the Fitnesse Test Report XML file - the specified test suite likely does not exist (Check the 'Generate Fitnesse Test Report File' 'build phase' setting 'FITNESSE_SUITE_NAME=<Your-Test-Suite-Name>' is set to a valid test suite name)";
 
 TestSuiteDataNotFound="Fitnesse Test Report Data File Not Found. Check log files for possible [OCSP] warnings or errors.";
+
+TestSuiteErrorsOccurred="Fitnesse test suite failed with %@ errors. Run ./LaunchFitnesse to investigate further these errors.";
